refactor: abstract job sources, make GitHub optional, and clean up resume parsing
- Extract job scraping logic into JobSource/JobSourceFactory/SimplifyJobSource pattern
- Make GitHub profile optional with config validation in ProfileBuilder
- Move ResumeNotFoundException to dedicated exception package
- Refactor Utils into final utility class with LatexPair return type
- Add Console.clearLine() to prevent output overlap artifacts
- Update resume prompt to use text-based {{RESUME_CONTENT}} template

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>